force-app/main/default/objects/OP4I_Entitlement_Renewal_View__c/OP4I_Entitlement_Renewal_View__c.object-meta.xml
<CustomObject>
    <label>OP4I Entitlement Renewal View</label>
    <nameField>
        <label>OP4I Entitlement Renewal View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OP4I Entitlement Renewal Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>