force-app/main/default/objects/OP4I_Entitlement_Renewal_View__c/fields/OSA__c.field-meta.xml
<CustomField>
    <fullName>OSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OSA</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>OP4I Entitlement Renewal Views</relationshipLabel>
    <relationshipName>OP4I_Entitlement_Renewal_Views</relationshipName>
    <type>Lookup</type>
</CustomField>