force-app/main/default/objects/OP4I_Entitlement_Renewal_View__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>