force-app/main/default/objects/OP4I_Entitlement_Renewal_View__c/fields/Renewal_Deal_Id__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Deal_Id__c</fullName>
    <label>Renewal Deal Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>