force-app/main/default/objects/OP4I_Entitlement_Renewal_View__c/fields/Renewal_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Uplift__c</fullName>
    <label>Renewal Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>